--- a/web/src/main/webapp/angularApp/index.html
+++ b/web/src/main/webapp/angularApp/index.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 
-<body ng-app="user_management">
+<body ng-app="myApp">
 <div class="navbar">
     <list><a href="#/user">用户信息</a></list>
     <list><a href="#/employee">雇员信息</a></list>
@@ -13,7 +13,6 @@
     <list><a href="#/schema">课表信息</a></list>
     <list><a href="#/customer">顾客信息</a></list>
     <list><a href="#/login">退出</a></list>
-
 </div>
 
 <div ng-view=""></div>
@@ -21,8 +20,8 @@
 <script src="lib/js/jquery-1.11.1.min.js"></script>
 <script src="lib/js/angular/angular.js"></script>
 <script src="lib/js/angular/angular-route.min.js"></script>
+
 <script src="angularApp/app.js"></script>
 <script src="angularApp/controllers/userController.js"></script>
-<div ng-view></div>
 </body>
 </html>
