--- a/web/src/main/webapp/angularApp/index.html
+++ b/web/src/main/webapp/angularApp/index.html
@@ -3,6 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <!--<script src="lib/cssUser/main.css"></script>-->
+
 </head>
 
 <body ng-app="myApp">
