--- a/web/src/main/webapp/angularApp/index.html
+++ b/web/src/main/webapp/angularApp/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <!--<script src="lib/cssUser/main.css"></script>-->
+    <link rel="stylesheet" type="text/css" href="lib/cssUser/main.css">
 
 </head>
 
@@ -25,5 +25,7 @@
 
 <script src="angularApp/app.js"></script>
 <script src="angularApp/controllers/userController.js"></script>
+<script src="angularApp/controllers/schemaController.js"></script>
+
 </body>
 </html>
